--- a/styles/styles.css
+++ b/styles/styles.css
@@ -21,7 +21,7 @@
 
   /* fonts */
   --body-font-family: roboto, roboto-fallback;
-  --heading-font-family: var(--body-font-family);
+  --heading-font-family: font-family: calibre, helvetica, tahoma, arial, sans-serif;;
   --fixed-font-family: 'Roboto Mono', menlo, consolas, 'Liberation Mono', monospace;
 
   /* body sizes */
@@ -60,7 +60,7 @@
 }
 
 body {
-  font-size: var(--body-font-size-m);
+  font-size: 0.875rem;
   margin: 0;
   font-family: var(--body-font-family);
   line-height: 1.6;
@@ -95,7 +95,7 @@ h1 { font-size: var(--heading-font-size-xxl); }
 h2 { font-size: var(--heading-font-size-xl); }
 h3 { font-size: var(--heading-font-size-l); }
 h4 { font-size: var(--heading-font-size-m); }
-h5 { font-size: var(--heading-font-size-s); }
+h5 { font-size: var(--heading-font-size-s); font-weight: normal; }
 h6 { font-size: var(--heading-font-size-xs); }
 
 p,
@@ -132,13 +132,13 @@ main pre {
 
 /* links */
 a:any-link {
-  color: var(--link-color);
+  color: var(--text-color);
   text-decoration: none;
 }
 
 a:hover {
   text-decoration: underline;
-  color: var(--link-hover-color);
+  color: var(--text-color);
 }
 
 /* buttons */
@@ -154,20 +154,17 @@ button {
   font-style: normal;
   font-weight: 600;
   cursor: pointer;
-  color: var(--background-color);
-  background-color: var(--link-color);
+  color: var(--text-color);
   margin: 16px 0;
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
-  border-radius: 30px;
 }
 
 a.button:hover,
 a.button:focus,
 button:hover,
 button:focus {
-  background-color: var(--link-hover-color);
   cursor: pointer;
 }
 
@@ -194,6 +191,7 @@ main img {
   display: inline-block;
   height: 24px;
   width: 24px;
+  padding: 10px;
 }
 
 .icon img {
