add changes to sustainabilty page

--- a/blocks/tabs/tabs.css
+++ b/blocks/tabs/tabs.css
@@ -8,10 +8,9 @@
 .tabs .tabs-list button {
   flex: 0 0 max-content;
   margin: 0;
-  border: 1px solid var(--dark-color);
   border-radius: 0;
   padding: 8px 16px;
-  background-color: var(--light-color);
+  background-color: var(--background-color);
   color: initial;
   font-size: unset;
   font-weight: bold;
@@ -23,21 +22,16 @@
   transition: background-color 0.2s;
 }
 
-.tabs .tabs-list button[aria-selected="true"] {
-  border-bottom: 1px solid var(--background-color);
-  background-color: var(--background-color);
-  cursor: initial;
-}
-
+.tabs .tabs-list button[aria-selected="true"],
 .tabs .tabs-list button[aria-selected="false"]:hover,
 .tabs .tabs-list button[aria-selected="false"]:focus {
-  background-color: var(--dark-color);
+  border-bottom: 2px solid var(--link-color);
 }
 
+
+
 .tabs .tabs-panel {
-  margin-top: -1px;
-  padding: 0 16px;
-  border: 1px solid var(--dark-color);
+  padding-top: 10px;
   overflow: auto;
 }
 
