--- a/blocks/accordion/accordion.css
+++ b/blocks/accordion/accordion.css
@@ -1,12 +1,3 @@
-.accordion details {
-  border: 1px solid var(--dark-color);
-}
-
-/* stylelint-disable-next-line no-descending-specificity */
-.accordion details + details {
-  margin-top: 16px;
-}
-
 .accordion details summary {
   position: relative;
   padding: 0 16px;
@@ -15,6 +6,7 @@
   list-style: none;
   overflow: auto;
   transition: background-color 0.2s;
+  border-bottom: 1px solid var(--dark-color);
 }
 
 .accordion details[open] summary {
@@ -23,7 +15,7 @@
 
 .accordion details summary:focus,
 .accordion details summary:hover {
-  background-color: var(--dark-color);
+  background-color: var(--light-color);
 }
 
 .accordion details summary::-webkit-details-marker {
