--- a/blocks/hero/hero.css
+++ b/blocks/hero/hero.css
@@ -9,7 +9,7 @@ main .hero-container {
 .hero {
   position: relative;
   padding: 32px;
-  min-height: 300px;
+  min-height: 550px;
 }
 
 .hero h1 {
@@ -31,4 +31,15 @@ main .hero-container {
   object-fit: cover;
   width: 100%;
   height: 100%;
+}
+
+.hero > div {
+  background: white;
+  padding-left: 10px;
+  padding-right: 10px;
+  width: 50%;
+}
+
+.hero .button:any-link {
+  border: 1px solid var(--text-color);
 }
