--- a/blocks/hero/hero.css
+++ b/blocks/hero/hero.css
@@ -33,13 +33,101 @@ main .hero-container {
   height: 100%;
 }
 
-main .hero > div {
-  background: white;
-  padding-left: 10px;
-  padding-right: 10px;
-  max-width: 50%;
-}
-
 .hero .button:any-link {
   border: 1px solid var(--text-color);
+}
+
+.hero {
+  background-position: center center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  height: calc(-138px + 100vh);
+  padding: 0;
+}
+
+.hero-content-wrapper {
+  max-width: 90rem;
+  margin: 0 auto;
+  height: 100%;
+  padding-left: 1.5rem;
+  padding-right: 1.5rem;
+}
+
+.hero-text-content {
+  padding: 2rem;
+  backdrop-filter: blur(0.25rem);
+  box-sizing: border-box;
+  max-width: 100%;
+  min-width: min-content;
+  position: relative;
+  transform: translateY(-35%);
+  color: rgb(0, 0, 0);
+  display: flex;
+  flex-direction: column;
+  animation: 1.5s ease-in 0s 1 normal both running hero-text-content-animation;
+  margin: 0;
+  width: 684px;
+}
+
+.hero-text-content::before {
+  content: "";
+  position: absolute;
+  left: 0px;
+  top: 0px;
+  width: 100%;
+  height: 100%;
+  background-color: rgb(255, 255, 255);
+  animation: 1.5s ease-in 0s 1 normal both running hero-text-content-before-animation;
+  z-index: -1;
+}
+
+.hero-text-content h1,
+.hero-text-content h2,
+.hero-text-content h3,
+.hero-text-content h4,
+.hero-text-content h5,
+.hero-text-content h6 {
+  margin: 0;
+  font-weight: 300;
+}
+
+.hero-text-content .button-container {
+  margin: 0;
+  display: flex;
+  justify-content: end;
+}
+
+.hero-text-content a.button {
+  margin: 2.25rem 0 0 0;
+  padding: 0.3125rem 1.5rem;
+  border: 1px solid;
+  display: inline-flex;
+  align-items: center;
+  font-family: AktivGrotesk, helvetica, arial, sans-serif;
+  font-weight: 500;
+  background-color: transparent;
+  color: rgb(0, 0, 0);
+  font-size: 0.875rem;
+  line-height: 1.25rem;
+  height: 2.5rem;
+}
+
+@keyframes hero-text-content-animation {
+  0% {
+    top: 100%;
+  }
+
+  100% {
+    top: 35%;
+  }
+}
+
+@keyframes hero-text-content-before-animation {
+  0% {
+    opacity: 0;
+  }
+
+  100% {
+    opacity: 0.8;
+  }
 }
