--- a/blocks/columns/columns.css
+++ b/blocks/columns/columns.css
@@ -27,9 +27,12 @@
   display: grid;
   grid-template-columns: 1fr 2fr;
   grid-template-rows: 1fr;
-  grid-column-gap: 1.5rem;
-  grid-row-gap: 1.5rem;
+  grid-gap: 1.5rem;
   align-items: stretch;
+}
+
+.columns.align-top > div {
+  align-items: flex-start;
 }
 
 .two-one.columns.bento > div {
@@ -46,7 +49,7 @@
 
 .columns.bento .text-column {
   padding: 2rem;
-  background-color: rgba(0, 0, 0, 0.06);
+  background-color: rgb(0 0 0 / 6%);
 }
 
 .columns.bento .column-with-image div {
@@ -68,14 +71,7 @@
   margin: 0;
   width: 100%;
   height: 100%;
-}
-
-.columns.bento picture {
   object-fit: cover;
-}
-
-.columns.align-top > div {
-  align-items: flex-start;
 }
 
 .columns.align-top .text-column {
