--- a/blocks/hero/hero.css
+++ b/blocks/hero/hero.css
@@ -8,8 +8,12 @@ main .hero-container {
 
 .hero {
   position: relative;
-  padding: 32px;
   min-height: 550px;
+  background-position: center center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  height: calc(-138px + 100vh);
+  padding: 0;
 }
 
 .hero h1 {
@@ -37,14 +41,6 @@ main .hero-container {
   border: 1px solid var(--text-color);
 }
 
-.hero {
-  background-position: center center;
-  background-size: cover;
-  background-repeat: no-repeat;
-  height: calc(-138px + 100vh);
-  padding: 0;
-}
-
 .hero-content-wrapper {
   max-width: 90rem;
   margin: 0 auto;
@@ -62,7 +58,7 @@ main .hero-container {
   min-width: min-content;
   position: relative;
   transform: translateY(-35%);
-  color: rgb(0, 0, 0);
+  color: rgb(0 0 0);
   display: flex;
   flex-direction: column;
   animation: 1.5s ease-in 0s 1 normal both running hero-text-content-animation;
@@ -73,11 +69,11 @@ main .hero-container {
 .hero-text-content::before {
   content: "";
   position: absolute;
-  left: 0px;
-  top: 0px;
+  left: 0;
+  top: 0;
   width: 100%;
   height: 100%;
-  background-color: rgb(255, 255, 255);
+  background-color: rgb(255 255 255);
   animation: 1.5s ease-in 0s 1 normal both running hero-text-content-before-animation;
   z-index: -1;
 }
@@ -99,7 +95,7 @@ main .hero-container {
 }
 
 .hero-text-content a.button {
-  margin: 2.25rem 0 0 0;
+  margin: 2.25rem 0 0;
   padding: 0.3125rem 1.5rem;
   border: 1px solid;
   display: inline-flex;
@@ -107,7 +103,7 @@ main .hero-container {
   font-family: AktivGrotesk, helvetica, arial, sans-serif;
   font-weight: 500;
   background-color: transparent;
-  color: rgb(0, 0, 0);
+  color: rgb(0 0 0);
   font-size: 0.875rem;
   line-height: 1.25rem;
   height: 2.5rem;
