--- a/styles/styles.css
+++ b/styles/styles.css
@@ -234,6 +234,7 @@ main .section.highlight {
   width: 16px;
 }
 
+/* stylelint-disable-next-line no-duplicate-selectors */
 h2 {
   font-family: AktivGrotesk, helvetica, arial, sans-serif;
   font-size: 1.625rem;
@@ -242,21 +243,21 @@ h2 {
   text-transform: inherit;
 }
 
-@media (min-width: 48rem) {
+@media (width >= 48rem) {
   h2 {
       font-size: 1.75rem;
       line-height: 2.25rem;
   }
 }
 
-@media (min-width: 64rem) {
+@media (width >= 64rem) {
   h2 {
       font-size: 2rem;
       line-height: 2.5rem;
   }
 }
 
-@media (min-width: 80rem) {
+@media (width >= 80rem) {
   h2 {
       font-size: 2.25rem;
       line-height: 2.75rem;
