--- a/blocks/tabs/tabs.css
+++ b/blocks/tabs/tabs.css
@@ -9,17 +9,21 @@
   flex: 0 0 max-content;
   margin: 0;
   border-radius: 0;
-  padding: 8px 16px;
+  padding: 9px 0;
   background-color: var(--background-color);
   color: initial;
   font-size: unset;
-  font-weight: bold;
-  line-height: unset;
+  font-weight: 500;
+  line-height: 24px;
   text-align: initial;
   text-overflow: unset;
   overflow: unset;
   white-space: unset;
   transition: background-color 0.2s;
+}
+
+.tabs .tabs-list button p {
+ margin: 0;
 }
 
 .tabs .tabs-list button[aria-selected="true"],
@@ -28,13 +32,59 @@
   border-bottom: 2px solid var(--link-color);
 }
 
-
-
 .tabs .tabs-panel {
   padding-top: 10px;
   overflow: auto;
 }
 
+.tabs .tabs-panel h2 {
+  font-family: AktivGrotesk, helvetica, arial, sans-serif;
+  font-size: 1.5rem;
+  font-weight: 400;
+  line-height: 2rem;
+  text-transform: inherit;
+}
+
+@media (width > 48rem) {
+  .tabs .tabs-panel h2 {
+    font-size: 1.625rem;
+    line-height: 2rem;
+  }
+}
+
+@media (width > 64rem) {
+  .tabs .tabs-panel h2 {
+    font-size: 1.75rem;
+    line-height: 2.25rem;
+  }
+}
+
+@media (width > 80rem) {
+  .tabs .tabs-panel h2 {
+    font-size: 2rem;
+    line-height: 2.5rem;
+  }
+}
+
+.tabs .tabs-panel > div > h2:first-child {
+  max-width: 792px;
+  margin-left: auto;
+  margin-right: auto;
+  text-wrap: wrap;
+}
+
+.tabs .tabs-panel > div > p {
+  max-width: 792px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+
 .tabs .tabs-panel[aria-hidden="true"] {
   display: none;
+}
+
+.tabs .accordion {
+  max-width: 792px;
+  margin: 64px auto 32px;
 }
