--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -4,6 +4,7 @@ header .nav-wrapper {
   width: 100%;
   z-index: 2;
   position: fixed;
+  box-shadow: rgb(0 0 0 / 20%) 0 3px 12px 0;
 }
 
 header .nav-wrapper::before {
